--- a/Api/package.json
+++ b/Api/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/artbase/bartosz-zaremba-konkurs-daj-sie-poznac#readme",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "knex": "^0.10.0",
+    "mysql": "^2.10.2"
   }
 }
