--- a/Api/package.json
+++ b/Api/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/artbase/bartosz-zaremba-konkurs-daj-sie-poznac#readme",
   "dependencies": {
+    "bluebird": "^3.3.4",
     "express": "^4.13.4",
     "knex": "^0.10.0",
+    "lodash": "^4.6.1",
     "mysql": "^2.10.2"
   }
 }
